# vocab-deck

./: CHANGELOG.md  CHANGELOG.obsolete.md  CONCEPTS.md  DECISIONS.md  README.md  SKILL-DESIGN.md  pyproject.toml  summarize.sh  youtube.sh
skills/article-summary-integrator/: SKILL.md
skills/clip-summarize/: SKILL.md
skills/clip-summarize/scripts/: extract_title.py
skills/vocab-toml/: SKILL.md
skills/vocab-toml/scripts/: check_vocab_toml.py
skills/youtube-subtitle/: SKILL.md
skills/youtube-subtitle/scripts/: vtt2txt.py
vocab_deck/: __init__.py  __main__.py  ai.py  config.py  helpers.py  memo.py  migrate_memo.py  render.py  server.py  settings.py  test_helpers.py
vocab_deck/static/: base.css  card.css  card.js  index.css
