[project]
name = "vocab-deck"
version = "0.1.0"
description = "Flashcard application for vocabulary study, driven by vocab-toml TOML files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.1",
    "ollama>=0.6.1",
    "uvicorn>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
vocab-deck = "vocab_deck.server:main"
